# safeguard-ansible

./: .gitignore  README.md
collection/: azure-pipelines.yml
collection/oneidentity/safeguard/: README.md  galaxy.yml
collection/oneidentity/safeguard/changelogs/: config.yaml
collection/oneidentity/safeguard/plugins/: README.md
collection/oneidentity/safeguard/plugins/lookup/: safeguardcredentials.py  safeguardpassword.py
collection/tests/Ansible/: inventory.yaml
collection/tests/Ansible/playbooks/: playbook.yaml
credential_type_plugin/: README.md  azure-pipelines.yml  pyproject.toml  setup.py
credential_type_plugin/safeguardcredentialtype/: __init__.py
credential_type_plugin/src/: __init__.py
credential_type_plugin/tests/: playbook.yaml  steps.txt
lookup_plugin/src/: safeguardcredentials.py
