[build-system]
#https://python-poetry.org/docs/pyproject
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "safeguardcredentialtype"
description = "One Identity Safeguard Credential Type plugin for Ansible"
version = "0.9.0"
readme = "README.md"
keywords = ["ansible","oneidentity", "safeguard", "credential type", "plugin"]
repository = "https://github.com/OneIdentity/safeguard-ansible"
authors = [
    "Brad Nicholes <brad.nicholes@oneidentity.com>",
]
maintainers = [
    "Brad Nicholes <brad.nicholes@oneidentity.com>",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/OneIdentity/safeguard-ansible/issues"

[tool.poetry.dependencies]
python = "^3.9"
pysafeguard = "^1.0.2"

[tool.poetry."awx.credential.plugins"]
spp_plugin = spp_custom_credential_plugin:spp_plugin

[tool.poetry.extras]
